@@ -21,8 +21,8 @@ void buffer_new(struct buffer_st *b);
 void buffer_add(struct buffer_st *b, char c);
 void buffer_delete(struct buffer_st *b);
 
-void base64_encode(struct buffer_st *b, const char *source, int length);
-void base64_decode(struct buffer_st *b, const char *source, int length);
+void base64_encode_xmlrpc(struct buffer_st *b, const char *source, int length);
+void base64_decode_xmlrpc(struct buffer_st *b, const char *source, int length);
 
 /*
 #define DEBUG_MALLOC
